Removed all warnings and errors. No guarantee that anything works though.....